--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@
   width: 120px;
   text-align: center;
 }
+.letter-box-selected {
+  background-color: #def;
+  border: 1px solid #789;
+}
 .letter-box-letter {
   padding: 10px;
   font-size: 2em;
